--- a/src/components/feed-item/index.module.scss
+++ b/src/components/feed-item/index.module.scss
@@ -4,6 +4,8 @@
   position: relative;
   max-width: 600px;
   margin-bottom: 20px;
+  border: 1px solid var(--gray-10);
+  padding: 10px;
 
   .token_infos_container {
     width: 100%;
